; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_gdb.c_main.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_gdb.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.captured_main_args = type { i32, i8**, i32, i64 }

@INTERP_CONSOLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca %struct.captured_main_args, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %7 = call i32 @memset(%struct.captured_main_args* %6, i32 0, i32 32)
  %8 = load i32, i32* %4, align 4
  %9 = getelementptr inbounds %struct.captured_main_args, %struct.captured_main_args* %6, i32 0, i32 0
  store i32 %8, i32* %9, align 8
  %10 = load i8**, i8*** %5, align 8
  %11 = getelementptr inbounds %struct.captured_main_args, %struct.captured_main_args* %6, i32 0, i32 1
  store i8** %10, i8*** %11, align 8
  %12 = getelementptr inbounds %struct.captured_main_args, %struct.captured_main_args* %6, i32 0, i32 3
  store i64 0, i64* %12, align 8
  %13 = load i32, i32* @INTERP_CONSOLE, align 4
  %14 = getelementptr inbounds %struct.captured_main_args, %struct.captured_main_args* %6, i32 0, i32 2
  store i32 %13, i32* %14, align 8
  %15 = call i32 @gdb_main(%struct.captured_main_args* %6)
  ret i32 %15
}

declare dso_local i32 @memset(%struct.captured_main_args*, i32, i32) #1

declare dso_local i32 @gdb_main(%struct.captured_main_args*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
